IBM MQ: Add CCSID property to session properties
Fixes #112